# flutter_ffmpeg_utils

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/dependecies/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/dependecies/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/dependecies/ffmpeg/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/dependecies/ffmpeg/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/lib/: main.dart  utils.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: ffmpeg_utils.podspec
ios/Classes/: ffmpeg_utils.c
lib/: ffmpeg_utils.dart  ffmpeg_utils_bindings_generated.dart
lib/src/: bindings.dart  muxer.dart  utils.dart
linux/: CMakeLists.txt
macos/: ffmpeg_utils.podspec
scripts/: make-ffmpeg.sh
src/: CMakeLists.txt  common.c  common.h  ffmpeg_utils.c  ffmpeg_utils.h
windows/: CMakeLists.txt
(+3 files in other folders)
